2004-09-01 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspGenerator.cs: handle builders that need to process inner text
	with tags.

	* Location.cs: added setters for the properties.

2004-07-21 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspGenerator.cs: the path for file was treated as virtual, but it's
	physical. Fixes bug #61524.

2004-07-16 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspParser.cs: fixed case-sensitivity issues with #include and its
	attributes. Closes #61429.

2004-07-07 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* BaseCompiler.cs:
	* WebServiceCompiler.cs: really create the dlls under DynamicBase

2004-06-19  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TemplateControlCompiler.cs: for system colors, use SystemColors class
	instead of Color. Fixes bug #60249.

2004-06-16 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* BaseCompiler.cs: try getting the Type from the cache before doing the 
	real work. Remove temporary files right after successful compilation.

	* CachingCompiler.cs: added GetTypeFromCache.

	* UserControlCompiler.cs: nothing interesting.

	* WebServiceCompiler.cs: try getting the Type from the cache before
	doing anything else. Remove temp files on sucessful compilation.

2004-06-11 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspGenerator.cs:
	* CachingCompiler.cs: use a different prefix when caching compiler
	results or Types.

2004-06-11  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* BaseCompiler.cs: dynamicBase is now protected. Check
	MONO_ASPNET_NODELETE here.

	* TemplateControlCompiler.cs: if the type is not known but has a 
	TypeConverter, invoke ConvertFromString in the generated code.

	* WebServiceCompiler.cs: it used a hardcoded C# compiler, now it gets
	the compiler from the configuration. Also handle MONO_ASPNET_NODELETE.

	* CachingCompiler.cs: updated compilation of web services and simple
	web handlers.

2004-06-08  Gonzalo Paniagua Javier <gonzalo@ximian.com>
